--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyrogram
 TgCrypto
 py-tgcalls==0.5.2
 python-dotenv
-youtube_dl
+yt-dlp
 youtube_search_python
 requests
 aiohttp
@@ -10,6 +10,7 @@ aiofiles
 asyncio
 youtube_search
 search_engine_parser
+ffmpeg-python
 ffmpeg
 Pillow
 ujson
